WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
69674
Web Inspector: HTTP headers merged incorrect in Chrome
https://bugs.webkit.org/show_bug.cgi?id=69674
Summary
Web Inspector: HTTP headers merged incorrect in Chrome
Libo Song
Reported
2011-10-07 14:57:50 PDT
Multiple headers are combined into one with the '\n' separator, instead of a comma. See:
http://trac.webkit.org/browser/trunk/Source/WebKit/chromium/src/WebHTTPLoadInfo.cpp?rev=96981#L108
It is correctly combined with comma in Safari 5.1. HTTP 1.1 Section 4.2 It MUST be possible to combine the multiple header fields into one "field-name: field-value" pair, without changing the semantics of the message, by appending each subsequent field-value to the first, each separated by a comma. Look at the following Cache-Control header: Response Headersview source Cache-Control:no-cache private no-store must-revalidate max-stale=0 post-check=0 pre-check=0 Content-Length:4352 Content-Type:text/html; charset=utf-8 Date:Fri, 07 Oct 2011 21:40:46 GMT Expires:Mon, 26 Jul 1997 05:00:00 GMT P3P:P3P - policyref="
http://www.adfusion.com/w3c/adfusion.xml
", CP="NON DSP COR CURa TIA" Pragma:no-cache Server:Microsoft-IIS/6.0 Set-Cookie:AF=CID=6f698bbf-1b81-4c5e-ba2b-5134f86d0952; expires=Sat, 07-Apr-2012 21:40:46 GMT; path=/ X-AspNet-Version:2.0.50727 X-Powered-By:ASP.NET Response Headersview parsed HTTP/1.1 200 OK Date: Fri, 07 Oct 2011 21:40:46 GMT Server: Microsoft-IIS/6.0 P3P: P3P - policyref="
http://www.adfusion.com/w3c/adfusion.xml
", CP="NON DSP COR CURa TIA" X-Powered-By: ASP.NET X-AspNet-Version: 2.0.50727 Pragma: no-cache Set-Cookie: AF=CID=6f698bbf-1b81-4c5e-ba2b-5134f86d0952; expires=Sat, 07-Apr-2012 21:40:46 GMT; path=/ Cache-Control: no-cache Cache-Control: private Cache-Control: no-store Cache-Control: must-revalidate Cache-Control: max-stale=0 Cache-Control: post-check=0 Cache-Control: pre-check=0 Expires: Mon, 26 Jul 1997 05:00:00 GMT Content-Type: text/html; charset=utf-8 Content-Length: 4352 You can reproduce this on www.cnn.com, in the network panel, look for
http://www.adfusion.com/adfusion.partnersite/categoryhtml.aspx?userfeedguid=c97e9baf-d238-42e0-bdd2-10cbd46e8b7c&pid=1&clickTag=http://ads.cnn.com/event.ng/Type%3dclick%26FlightID%3d352757%26AdID%3d484596%26TargetID%3d77299%26Segments%3d730,2247,2743,2823,3285,3430,9496,9779,9781,9853,10381,16113,17173,17251,18517,18982,19419,21497,30363,30550,30582,30708,31936,31939,32530,32594,32749,32922,33852,35306,35605,36376,38203,39377,39378,39416,39671,40253,41850,42838,45557,45604,45611,45799,46163,46694,47603,48618,48619,48897,49715,50069,50091,50778,50779,51392,51756,51876,51962,52195,52207,52256,52448,52649,52765,52922,53055,53151,53232,53347,53359,53423,53424,53478,53577,53582,53583,53595,53647,53835,53961,53974,54095,54114,54178,54251,54319,54404,54534,54567,54633,54637,54665,54668,54675,54746,54747,54867,54888,54895,54897%26Values%3d1588%26Redirect%3d
Attachments
Patch
(1.44 KB, patch)
2011-10-27 12:07 PDT
,
Vsevolod Vlasov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Vsevolod Vlasov
Comment 1
2011-10-27 12:07:42 PDT
Created
attachment 112722
[details]
Patch
WebKit Review Bot
Comment 2
2011-10-27 15:38:48 PDT
Comment on
attachment 112722
[details]
Patch Clearing flags on attachment: 112722 Committed
r98651
: <
http://trac.webkit.org/changeset/98651
>
WebKit Review Bot
Comment 3
2011-10-27 15:38:52 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug