Web Inspector: HTTP headers merged incorrect in Chrome https://bugs.webkit.org/show_bug.cgi?id=69674

Reviewed by Pavel Feldman.

* src/WebHTTPLoadInfo.cpp:
(WebKit::addHeader):


Canonical link: https://commits.webkit.org/87278@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98651 268f45cc-cd09-0410-ab3c-d52691b4dbfc